# windpike

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
aerospike-core/: Cargo.toml
aerospike-core/src/batch/: batch_executor.rs
aerospike-core/src/cluster/: mod.rs  node.rs  partition_tokenizer.rs
aerospike-core/src/commands/: batch_read_command.rs
aerospike-core/src/net/: connection.rs
aerospike-core/src/policy/: mod.rs
src/: batch.rs  bin.rs  client.rs  errors.rs  index.rs  key.rs  lib.rs  macros.rs  policies.rs  policy.rs  query.rs  record.rs  result_code.rs  task.rs  user.rs  value.rs
src/batch/: batch_executor.rs  batch_read.rs  mod.rs
src/cluster/: mod.rs  node.rs  node_validator.rs  partition.rs  partition_tokenizer.rs
src/commands/: admin_command.rs  batch_read_command.rs  buffer.rs  delete_command.rs  execute_udf_command.rs  exists_command.rs  field_type.rs  info_command.rs  mod.rs  operate_command.rs  particle_type.rs  query_command.rs  read_command.rs  scan_command.rs  single_command.rs  stream_command.rs  touch_command.rs  write_command.rs
src/expressions/: bitwise.rs  hll.rs  lists.rs  maps.rs  mod.rs
src/msgpack/: decoder.rs  encoder.rs  mod.rs
src/net/: connection.rs  connection_pool.rs  host.rs  mod.rs  parser.rs  pool.rs
src/operations/: bitwise.rs  cdt.rs  cdt_context.rs  exp.rs  hll.rs  list.rs  lists.rs  map.rs  maps.rs  mod.rs  scalar.rs
src/policy/: admin_policy.rs  batch_policy.rs  client_policy.rs  commit_level.rs  concurrency.rs  consistency_level.rs  expiration.rs  generation_policy.rs  mod.rs  priority.rs  query_policy.rs  read_policy.rs  record_exists_action.rs  scan_policy.rs  write_policy.rs
src/query/: filter.rs  index_types.rs  mod.rs  recordset.rs  statement.rs  udf.rs
src/task/: index_task.rs  mod.rs  register_task.rs  task.rs
tests/: client.rs  lib.rs
tests/common/: mod.rs
tests/integration/: batch.rs  cdt_bitwise.rs  cdt_list.rs  cdt_map.rs  client.rs  common.rs  hll.rs  index.rs  kv.rs  main.rs  scan.rs  task.rs  truncate.rs
tests/src/: batch.rs  cdt_bitwise.rs  cdt_list.rs  cdt_map.rs  exp.rs  exp_bitwise.rs  exp_hll.rs  exp_list.rs  exp_map.rs  exp_op.rs  hll.rs  index.rs  kv.rs  mod.rs  query.rs  scan.rs  serialization.rs  task.rs  truncate.rs  udf.rs
