[package]
name = "aerospike"
version = "1.2.0"
edition = "2021"
description = "Aerospike Client for Rust"
keywords = ["aerospike", "nosql", "distributed", "database"]
categories = ["database"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
async-trait = "0.1.66"
base64 = "0.21.0"
bcrypt = "0.14.0"
bitflags = "2.0.0"
once_cell = "1.17.1"
rand = "0.8.5"
ripemd = "0.1.3"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["io-util", "net", "rt", "sync", "time"] }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
