[package]
name = "windpike"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.62"
description = "Asynchronous client library for Aerospike"
readme = "README.md"
homepage = "https://aerospike.com"
repository = "https://github.com/dnaka91/windpike"
license = "MIT"
keywords = ["aerospike", "async", "database"]
categories = ["database"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.0"
bb8 = "0.8.0"
bcrypt = "0.14.0"
bitflags = "2.2.1"
bytes = "1.4.0"
rand = "0.8.5"
ripemd = "0.1.3"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["io-util", "net", "rt", "sync", "time"] }
tracing = "0.1.37"

[dev-dependencies]
proptest = "1.1.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
