[package]
name = "windpike"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "Asynchronous client library for Aerospike"
readme = "README.md"
homepage = "https://aerospike.com"
repository = "https://github.com/dnaka91/windpike"
license = "MIT"
keywords = ["aerospike", "async", "database"]
categories = ["database"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
async-trait = "0.1.71"
base64 = "0.21.2"
bb8 = "0.8.1"
bcrypt = "0.15.0"
bitflags = "2.3.3"
bytes = "1.4.0"
ordered-float = "3.7.0"
rand = "0.8.5"
ripemd = "0.1.3"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["io-util", "net", "rt", "sync", "time"] }
tracing = "0.1.37"

[dev-dependencies]
proptest = "1.2.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
